--- a/cross-species-CDS-optimization_2509/in-silico_horizontal_gene_transfer.ipynb
+++ b/cross-species-CDS-optimization_2509/in-silico_horizontal_gene_transfer.ipynb
@@ -6,13 +6,17 @@
         "id": "R0xDYaGkru93"
       },
       "source": [
-        "# DL-Guided Cross-Species Gene Sequence Optimization (a demo)\n",
+        "# DL-Guided Cross-Species Gene Sequence Optimization (a VERY NAIVE demo)\n",
+        "\n",
+        "**This is essentially just an extremely naive demo I played around with before starting uni to get familiarised with the field.**\n",
+        "\n",
+        "---\n",
         "\n",
         "> *In-silico horizontal gene transfer*\n",
         "\n",
-        "![align1](/img/align_pr1.png)\n",
+        "![align1](./img/align_pr1.png)\n",
         "\n",
-        "This project was developed as the dry-lab component of my iGEM team’s synthetic biology project. While entirely illustrative in nature (and independent of our wet-lab experiments, where plasmids for actual biotransformation are transferred across two bacterial species), the primary aim is to deepen my understanding of computational biology. I personally find the field extremely fascinating, and over the past few weeks, the whole process of designing the pipeline, researching algorithms, and implementing (plus so much debugging...) the code has been both rewarding and incredibly fun.\n",
+        "The project was initially developed as the dry-lab component of my iGEM team’s synthetic biology project. While entirely illustrative in nature (and independent of our wet-lab experiments, where plasmids for actual biotransformation are transferred across two bacterial species), the primary aim is to deepen my understanding of computational biology. I personally find the field extremely fascinating, and over the past few weeks, the whole process of designing the pipeline, researching algorithms, and implementing (plus so much debugging...) the code has been both rewarding and incredibly fun.\n",
         "\n",
         "The central idea behind the pipeline is that the base model (in this case [Evo-1](https://github.com/evo-design/evo/)) captures general *prokaryotic* genomic patterns, while fine-tuning on the target host species' DNA corpus enables it to learn host-specific contextual information. This, in turn, helps reveal how 'host-like' a candidate sequence is, thereby guiding sequence optimization. This 'mutagenesis' step is carried out via an iterative, directed-evolution–like MH-MCMC sampling procedure, which recursively proposes point mutations on the current sequence while protecting the enzyme's active site from non-synonymous substitutions. Finally, optimized sequences are evaluated by calculating CAI and GC content to assess host compatibility, and by performing structural predictions to visualize the structures of the new proteins (via PyMol) and compute further metrics (pLDDTs and scores for alignment with reference sequence).\n",
         "\n",
@@ -1804,40 +1808,40 @@
         "\n",
         "**Initial (reference) protein sequence**: pLDDT=94.4, pTM=0.916\n",
         "\n",
-        "![plot0](/img/init_pr.png)\n",
+        "![plot0](./img/init_pr.png)\n",
         "\n",
-        "![plot0](/img/init_model3.png)\n",
+        "![plot0](./img/init_model3.png)\n",
         "\n",
-        "![plddt0](/img/Optim1_91ca1_plddt.png)\n",
+        "![plddt0](./img/Optim1_91ca1_plddt.png)\n",
         "\n",
-        "![coverage0](/img/Optim1_91ca1_coverage.png)\n",
+        "![coverage0](./img/Optim1_91ca1_coverage.png)\n",
         "\n",
         "Used as reference to align with predicted structures of the following optimized sequences (I only tested two of them): \n",
         "\n",
         "**Optimized sequence #1**: pLDDT=94.4, pTM=0.915, RMSD=0.215, TM-score=0.9835\n",
         "\n",
-        "![align1](/img/align_pr1.png)\n",
+        "![align1](./img/align_pr1.png)\n",
         "\n",
-        "![plot1](/img/Optim1_model5.png)\n",
+        "![plot1](./img/Optim1_model5.png)\n",
         "\n",
-        "![plddt1](/img/Optim1_91ca1_plddt.png)\n",
+        "![plddt1](./img/Optim1_91ca1_plddt.png)\n",
         "\n",
-        "![coverage1](/img/Optim1_91ca1_coverage.png)\n",
+        "![coverage1](./img/Optim1_91ca1_coverage.png)\n",
         "\n",
-        "![tm1](/img/tm1.png)\n",
+        "![tm1](./img/tm1.png)\n",
         "\n",
         "\n",
         "**Optimized sequence #4**: pLDDT=94.6, pTM=0.917, RMSD=0.203, TM-score=0.9801\n",
         "\n",
-        "![align4](/img/align_pr4.png)\n",
+        "![align4](./img/align_pr4.png)\n",
         "\n",
-        "![plot4](/img/Optim4_model3.png)\n",
+        "![plot4](./img/Optim4_model3.png)\n",
         "\n",
-        "![plddt4](/img/Optim4_7aaf1_0_plddt.png)\n",
+        "![plddt4](./img/Optim4_7aaf1_0_plddt.png)\n",
         "\n",
-        "![coverage4](/img/Optim4_7aaf1_0_coverage.png)\n",
+        "![coverage4](./img/Optim4_7aaf1_0_coverage.png)\n",
         "\n",
-        "![tm4](/img/tm4.png)"
+        "![tm4](./img/tm4.png)"
       ]
     },
     {
